fix issue with overflowing images on browse plugin page

--- a/plugins/themes/bootstrap3-child/styles/custom.less
+++ b/plugins/themes/bootstrap3-child/styles/custom.less
@@ -238,7 +238,6 @@ table.table-small {
 
 /* blog */
 
-
 .page-blog,
 .page-blog-post {
 
@@ -257,6 +256,10 @@ table.table-small {
 		border-bottom: 1px solid #ddd;
 		padding: 25px 0;
 	}
+
+  .blog-summary img {
+    max-width: 100%;
+  }
 
 	& .blog-summary h2 {
     line-height: 1.2;
